syntax = "proto3";

package like;

message Status {
   bool liked = 1;
}

message PostLike {
  string post_id = 1;
  string owner_id = 2;
}

message CommentLike {
  string comment_id = 1;
  string owner_id = 2;
}

message Post {
  string id = 1;
  string title = 2;
  string image_url = 3;
  string owner_id = 4;
  repeated Owner likes = 5;
}

message Comment {
  string id = 1;
  string content = 2;
  string owner_id = 3;
  string post_id = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
  repeated Owner likes = 8;
}

message Owner {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  int64 age = 4;
  Gender gender = 5;
}

enum Gender {
  male = 0;
  female = 1;
}

message GetOwnerId {
  string owner_id = 1;
}

message GetPostId {
  string post_id = 1;
}

message GetCommentId {
  string comment_id = 1;
}

service LikeService {
  rpc LikePost(PostLike) returns (Status);
  rpc LikeComment(CommentLike) returns (Status);
  rpc GetLikeOwnersByPostId(GetPostId) returns (Post);
  rpc GetLikeOwnersByCommentId(GetCommentId) returns (Comment);
}